# jet-angularity-study

./: .gitignore  .gitignore.swp  1  @  CLAUDE.md  _histogram_utils.py  _pdgid_utils.py  _unfolding_utils.py  arrow_to_tensordict.py  bounded_pool_executor.py  cluster-data.py  cluster-embedding.py  cluster_data.py  cluster_embedding.py  cluster_pythia8.py  clustering-test.ipynb  config.py  dataset.py  feature_importance.py  feature_importance_cnn.py  gdrive_helper.py  generate_unrolled.py  generate_unrolled_layout_file.py  histograms.py  histograms_old.py  make_alt_embedding.py  make_herwig7_prior_hists.py  make_herwig7_reweight_check.py  make_plots.ipynb  make_sys_var_tables.py  mc_histograms.py  model_io.py  multifold.py  multifold_nb.py  omnisequential.py  omnitrain.py  particle_data.py  plot_ab_closure.py  plot_closure.py  plot_feat_mode_comp.py  (+22 more)
core/: density_ratio.py  features.py  paths.py  reweight.py
examples/z-jets/: multifold_zjets.py
extra-files/: load_data.py  multifold-0.py  pyrightconfig.json
layouts/: plot_hp2026_prelims.slides.json
runtime-files/: binning.json  bins_p00.01_N55000.json  bins_p00.02_N100000.json  bins_p00.02_N50000.json  bins_p00.02_N55000.json  bins_p00.03_N100000.json  bins_p00.03_N55000.json  bins_perpt.json  config.angularities.tower_gain_sys.autoprep.json  config.angularities_minimal.nominal.json  config.angularities_minimal.tower_et_corr_sys.json  config.angularities_minimal.tower_gain_sys.json  config.angularities_minimal.track_pt_sys.json  config.angularities_minimal.unf_prior_herwig7.json  config.angularities_minimal.unf_prior_like_data.json  config.angularities_noptd.tower_gain_sys.json  config.json  config.noptd.jet_pt_res_sys_0.json  config.noptd.jet_pt_res_sys_1.json  config.noptd.nominal.json  config.noptd.tower_et_corr_sys.json  config.noptd.track_pt_sys.json  config.noptd.unf_iter_sys_0.json  config.noptd.unf_iter_sys_1.json  config.noptd.unf_prior_herwig7.json  config.noptd.unf_prior_like_data.json
runtime-files/runLists/: ._pp200_production_2012_BAD_Issac.list  ._pp200_production_2012_goodRuns.list  AuAu_200_production_mid_2014.list  badRuns_raw_wNoHTCut_AuAu_200_production_mid_2014.list  goodRuns_pp200_production_2012.list
runtime_files/: pythia8_detroit_tune.txt
runtime_files/runLists/: badRuns_AuAu_200_production_mid_2014.list  badRuns_raw_AuAu_200_production_mid_2014.list  badRuns_wNoHTCut_AuAu_200_production_mid_2014.list  goodRuns_MixedEvents_AuAu_200_production_mid_2014.list  goodRuns_wNoHTCut_AuAu_200_production_mid_2014.list  pp200_production_2012_goodRuns.list  runListMaker.cpp
slides/: beamerthemeSoton.sty  dnp-slides.aux  dnp-slides.nav  dnp-slides.tex
test/: histograms_herwig.py  pca.py  preprocessing.py  pythia8.py  test_core.py
torchmodel/: pyproject.toml
utils/: data.py  histogram.py  plotting.py  pyproject.toml
utils/src/utils/: axis.py  (+6 more)
(+65 files in other folders)
