[project]
name = "jet-angularity-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastjet>=3.4.3.1",
  "torchdata",
  "tensordict",
  "matplotlib>=3.10.1",
  "uproot>=5.6.0",
  "vector>=1.6.1",
  "numba>=0.61",
  "scipy>=1.15.2",
  "churten",
  "pyarrow>=22.0.0",
  "pyyaml>=6.0.3",
  "pandas>=3.0.0",
  "thoda",
  "marimo>=0.20.2",
  "adjusttext>=1.3.0",
  "pythia8mc>=8.317.0",
]

[dependency-groups]
dev = [
  "PyQt6",
  "ipykernel>=7.1.0",
  "mplhep>=0.3.59",
  "uproot-browser>=0.7.2",
  "tqdm>=4.67.1",
  "marimo[recommended]>=0.19.8",
  "ty>=0.0.16",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torchdata = [
  { index = "torchdata"},
]
churten = { path = "../packages/churten", editable = true }
thoda = { path = "../packages/thoda", editable = true }

[[tool.uv.index]]
name = "torchdata"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true


